<resources>
    <string name="app_name">MemorialApp</string>

    <string name="tab_to_do">关怀</string>
    <string name="tab_message">销售数据</string>
    <string name="tab_drive">拜访</string>
    <string name="tab_my_profile">我的</string>
    <string name="tab_to_task">任务</string>

    <string name="title_name">怀恩纪念</string>
    <string name="title_approval_detail">折扣申请审批</string>
    <string name="title_approval_detail_h">折扣申请详情</string>
    <string name="title_to_test_drive">拜访申请</string>

    <string name="tab_to_home">首页</string>
    <string name="tab_introduce">生平</string>
    <string name="tab_memorial">思念</string>
    <string name="tab_to_comment">留言</string>
    <string name="tab_to_worship">祭奠</string>

    <string name="tab_all">去拜访</string>
    <string name="tab_persistence">拜访历史</string>
    <string name="tab_price_approval">授权拜访</string>
    <string name="tab_contract">订单</string>

    <string name="login_tv_tips">MemorialApp</string>
    <string name="login_code_tips">短信快捷登录</string>
    <string name="login_btn"> 立 即 登 录 </string>

    <string name="code_phone_tips">手机号格式不正确</string>
    <string name="code_phone_edt_tips">请输入手机号</string>
    <string name="code_edt_tips">请输入短信验证码</string>
    <string name="login_tv_contents">PPN证书登录</string>

    <string name="charge_money_tips">1，暂时只支持支付宝在线支付\n2，需要通过其它方式充值或在线充值过程中遇到问题的请致电 <font color="#2193FF">400-911-911</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>